output/facebook/rocksdb/issues/50.txt
make clean; make results in the following error:
overloaded-virtual -c db/builder.cc -o db/builder.o 
In file included from ./db/dbformat.h:18:0,
                 from db/builder.cc:13:
./util/coding.h: In function ‘uint32_t rocksdb::DecodeFixed32(const char_)’:
./util/coding.h:70:7: error: ‘port’ has not been declared
   if (port::kLittleEndian) {
       ^
./util/coding.h: In function ‘uint64_t rocksdb::DecodeFixed64(const char_)’:
./util/coding.h:84:7: error: ‘port’ has not been declared
   if (port::kLittleEndian) {
       ^
./util/coding.h:94:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1plus: all warnings being treated as errors
make: **\* [db/builder.o] Error 1

Any help would be greatly appreciated.

what does your `build_config.mk` file look like?

This is the contents of the build_config.mk file

/rocksdbjni/rocksdb$ cat build_config.mk 
SOURCES=db/builder.cc db/c.cc db/db_filesnapshot.cc db/dbformat.cc db/db_impl.cc db/db_impl_readonly.cc db/db_iter.cc db/db_statistics.cc db/db_stats_logger.cc db/filename.cc db/log_reader.cc db/log_writer.cc db/memtable.cc db/memtablelist.cc db/merge_helper.cc db/merge_operator.cc db/repair.cc db/table_cache.cc db/table_properties_collector.cc db/transaction_log_impl.cc db/version_edit.cc db/version_set.cc db/version_set_reduce_num_levels.cc db/write_batch.cc table/block_based_table_builder.cc table/block_based_table_factory.cc table/block_based_table_reader.cc table/block_builder.cc table/block.cc table/filter_block.cc table/flush_block_policy.cc table/format.cc table/iterator.cc table/merger.cc table/two_level_iterator.cc util/arena_impl.cc util/auto_roll_logger.cc util/blob_store.cc util/bloom.cc util/build_version.cc util/cache.cc util/coding.cc util/comparator.cc util/crc32c.cc util/env.cc util/env_hdfs.cc util/env_posix.cc util/filter_policy.cc util/hash.cc util/hash_skiplist_rep.cc util/histogram.cc utilities/backupable/backupable_db.cc utilities/merge_operators/put.cc utilities/merge_operators/string_append/stringappend2.cc utilities/merge_operators/string_append/stringappend.cc utilities/merge_operators/uint64add.cc utilities/redis/redis_lists.cc utilities/ttl/db_ttl.cc util/ldb_cmd.cc util/ldb_tool.cc util/logging.cc util/murmurhash.cc util/options.cc util/perf_context.cc util/skiplistrep.cc util/slice.cc util/statistics.cc util/status.cc util/string_util.cc util/vectorrep.cc  /home/data/rocksdbjni/rocksdb/port/stack_trace.cc /home/data/rocksdbjni/rocksdb/port/port_posix.cc  
SOURCESCPP=
MEMENV_SOURCES=helpers/memenv/memenv.cc
CC=cc
CXX=g++
PLATFORM=OS_LINUX
PLATFORM_LDFLAGS= -lpthread -lrt -lsnappy -lgflags -lz -lbz2
VALGRIND_VER=
PLATFORM_CCFLAGS=  -lpthread -lrt -DROCKSDB_FALLOCATE_PRESENT -DSNAPPY -DGFLAGS -DZLIB -DBZIP2 
PLATFORM_CXXFLAGS=-std=gnu++11   -lpthread -lrt -DROCKSDB_FALLOCATE_PRESENT -DSNAPPY -DGFLAGS -DZLIB -DBZIP2 
PLATFORM_SHARED_CFLAGS=-fPIC
PLATFORM_SHARED_EXT=so
PLATFORM_SHARED_LDFLAGS= -shared -Wl,-soname -Wl,
PLATFORM_SHARED_VERSIONED=true
EXEC_LDFLAGS=
JEMALLOC_INCLUDE=
JEMALLOC_LIB=

Take a look at the patch from https://github.com/facebook/rocksdb/pull/48 (apply the fix in the comment of @vmg)

That worked perfectly. Thank you.

